# jieba_fast_dat

./: .gitignore  GEMINI.md  GEMINI_bk.md  GEMINI_bk2.md  README.md  pyproject.toml  pytest.txt  requirements.txt  setup.py  spec.md  test_dat.py
docs/: architecture.md  brownfield-prd.md  uv_test_workflow.md
jieba_fast_dat/: __init__.py  __main__.py  _compat.py
jieba_fast_dat/analyse/: analyzer.py  textrank.py  tfidf.py
jieba_fast_dat/finalseg/: __init__.py
jieba_fast_dat/posseg/: __init__.py
jieba_fast_dat/source/: jieba_fast_functions_pybind.cpp
test/: demo.py  extract_tags.py  extract_tags_idfpath.py  extract_tags_stop_words.py  extract_tags_with_weight.py  extract_topic.py  jieba_test.py  jiebacmd.py  performance_test.py  test.py  test_bug.py  test_change_dictpath.py  test_cut_for_search.py  test_cutall.py  test_dict_speed.py  test_extract_tags.py  test_file.py  test_lock.py  test_mmap_cache.py  test_multithread.py  test_no_hmm.py  test_pos.py  test_pos_file.py  test_pos_no_hmm.py  test_segmentation_pos.py  test_tokenize.py  test_tokenize_no_hmm.py  test_userdict.py  test_whoosh.py  test_whoosh_file.py  test_whoosh_file_read.py
test/parallel/: extract_tags.py  test.py  test2.py  test_cut_for_search.py  test_disable_hmm.py  test_file.py  test_pos.py  test_pos_file.py
